Update to Gradle 10.
Update the Microsoft Auth engine.

Removed decrepated things

Java is now downloaded when the play button is pressed.